// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brightcove-video web component renders correctly 1`] = `
<div>
  <video
    autoPlay={false}
    className="video-js"
    controls={true}
    data-account="[ACCOUNT_ID]"
    data-application-id={true}
    data-embed="default"
    data-player="default"
    data-video-id="[VIDEO_ID]"
    id="[VIDEO_ID]-[ACCOUNT_ID]-1"
    style={
      Object {
        "height": 180,
        "width": 320,
      }
    }
  />
</div>
`;

exports[`brightcove-video web component renders correctly with a poster 1`] = `
<div>
  <video
    autoPlay={false}
    className="video-js"
    controls={true}
    data-account="[ACCOUNT_ID]"
    data-application-id={true}
    data-embed="default"
    data-player="default"
    data-video-id="[VIDEO_ID]"
    id="[VIDEO_ID]-[ACCOUNT_ID]-2"
    poster="[POSTER_URI]"
    style={
      Object {
        "height": 180,
        "width": 320,
      }
    }
  />
</div>
`;
